--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,10 +1,14 @@
 FROM openjdk:8-jdk-alpine
-
 RUN addgroup -S spring && adduser -S spring -G spring
-
-USER spring:spring
-
+COPY start.sh target/
+RUN chmod +x target/start.sh
+# USER spring:spring
+RUN ulimit -n 10000
 ARG JAR_FILE=target/*jar
-COPY ${JAR_FILE} app.jar
+COPY target/* target/
+# COPY ${JAR_FILE} target/forum.jar
 
-ENTRYPOINT ["java","-Xms128M","-Xmx128M","-XX:PermSize=64m","-XX:MaxPermSize=128m","-Dspring.profiles.active=prod","-jar","/app.jar"]
+# ENTRYPOINT ["java","-Dspring.profiles.active=prod","-jar","/app.jar"]
+# ENTRYPOINT [ "/target/start.sh" ]
+
+ ENTRYPOINT source target/start.sh
