--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,14 +1,10 @@
 FROM openjdk:8-jdk-alpine
+
 RUN addgroup -S spring && adduser -S spring -G spring
-COPY start.sh target/
-RUN chmod +x target/start.sh
-# USER spring:spring
-RUN ulimit -n 10000
+
+USER spring:spring
+
 ARG JAR_FILE=target/*jar
-COPY target/* target/
-# COPY ${JAR_FILE} target/forum.jar
+COPY ${JAR_FILE} app.jar
 
-# ENTRYPOINT ["java","-Dspring.profiles.active=prod","-jar","/app.jar"]
-# ENTRYPOINT [ "/target/start.sh" ]
-
- ENTRYPOINT source target/start.sh
+ENTRYPOINT ["java","-Xms128M","-Xmx128M","-XX:PermSize=64m","-XX:MaxPermSize=128m","-Dspring.profiles.active=prod","-jar","/app.jar"]
