--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ networks:
 
 services:
   redis-forum-api:
-    image: redis
+    image: redis@sha256:d581aded52343c461f32e4a48125879ed2596291f4ea4baa7e3af0ad1e56feed
     container_name: redis-forum-api
     restart: unless-stopped
     expose:
@@ -18,7 +18,7 @@ services:
       - cache
 
   mysql-forum-api:
-    image: mysql:5.7
+    image: mysql@sha256:a840244706a5fdc3c704b15a3700bfda39fdc069262d7753fa09de2d9faf5f83
     container_name: mysql-forum-api
     restart: unless-stopped
     environment:
@@ -64,7 +64,7 @@ services:
         hard: 65536
   
   proxy-forum-api:
-    image: nginx
+    image: nginx@sha256:10f14ffa93f8dedf1057897b745e5ac72ac5655c299dade0aa434c71557697ea
     container_name: proxy-forum-api
     restart: unless-stopped
     volumes:
@@ -79,7 +79,7 @@ services:
       - app-forum-api
 
   prometheus-forum-api:
-    image: prom/prometheus:latest
+    image: prom/prometheus@sha256:df0cd5887887ec393c1934c36c1977b69ef3693611932c3ddeae8b7a412059b9
     user: "1000:1000"
     container_name: prometheus-forum-api
     restart: unless-stopped
